# ble-scanner

./: Cargo.toml  Cross.toml  Dockerfile  README.md
.cargo/: config
.github/workflows/: build.yml
cross-docker/: Dockerfile  Dockerfile.arm-unknown-linux-gnueabi  build-docker  build-docker.aarch64-unknown-linux-gnu  build-docker.arm-unknown-linux-gnueabi  build-docker.arm-unknown-linux-gnueabihf  build-docker.x86_64-unknown-linux-gnu
misc/: ble-scanner.service  create-archive  prepare-artifacts
src/: main.rs
